--- a/templates/protostar/css/user.css
+++ b/templates/protostar/css/user.css
@@ -4,7 +4,7 @@
 	background: black;
     display: block;
     width: 100%;
-    z-index: 999;
+    z-index: 1;
     left: 0;
     box-shadow: 0 2px 10px rgba(0,0,0,.25);
 }
@@ -15,7 +15,7 @@
     margin-bottom: 5px;
 }
 .container-2{
-  width: 300px;
+  width: 500px;
   vertical-align: middle;
   white-space: nowrap;
   position: relative;
@@ -23,7 +23,7 @@
 .container-2 input#search{
   width: 50px;
   height: 50px;
-  background: #2b303b;
+  background: transparent;
   border: none;
   font-size: 10pt;
   float: right;
@@ -55,16 +55,20 @@
    color: #65737e;  
 }
 .container-2 .icon{
-  position: absolute;
+  float: right;
   top: 50%;
   margin-left: 17px;
-  margin-top: 17px;
-  z-index: 1;
+  margin: 17px;
+  z-index: 999;
   color: #4f5b66;
 }
 .container-2 input#search:focus, .container-2 input#search:active{
   outline:none;
   width: 300px;
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: none;
 }
  
 .container-2:hover input#search{
